# SPHINX_INIT

./: .coverage  .dockerignore  .gitignore  Dockerfile  LICENSE  Projet_1_bases.md  README.md  historique_commande.md  main.py  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: ci.yml
app/: main.py  moncsv.csv
app/modules/: __init__.py  mon_module.py
docs/source/: conf.py
tests/: test_math_csv.py
